--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -1,4 +1,4 @@
-<a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/oqudue369/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/oqudue369/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/oqudue369/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/oqudue369/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/oqudue369/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/oqudue369/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/oqudue369/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/oqudue369/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/oqudue369/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/oqudue369/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/12a.jpg" title="头条"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p> <a href="https://tt6.jugd53.ml/nawyzs/v513e" target="_blank">动态网</a> | <a href="https://tt6.jugd53.ml/nawyzs/e11s" target="_blank">看中国</a> | <a href="https://git.io/fjHpI" target="_blank">新纪元</a> | <a href="https://tt6.jugd53.ml/nawyzs/h12y" target="_blank">无界</a> | <a href="https://tt6.jugd53.ml/nawyzs/q8c" target="_blank">退党</a> | <a href="https://git.io/fjHpT" target="_blank">网门</a> | <a href="https://tt6.jugd53.ml/nawyzs/b4p" target="_blank">神韵</a> | <a href="https://tt6.jugd53.ml/nawyzs/l12x" target="_blank">圣缘</a> | <a href="https://tt6.jugd53.ml/nawyzs/m3p" target="_blank">明慧网</a> | <a href="https://tt6.jugd53.ml/nawyzs/d10a" target="_blank">正见网</a> | <a href="https://tt6.jugd53.ml/nawyzs/o9p" target="_blank">希望之声</a> | <a href="https://gitlab.com/szzdlab/w1/raw/master/5Vu3_XS2V.mp4" target="_blank">无罪辩护</a> |  <a href="https://gitlab.com/szzdlab/w5/raw/master/zjmd1_19.mp4" target="_blank">终级目的</a> |<a href="https://gitlab.com/szzdlab/w5/raw/master/mtdwh.mp4" target="_blank">漫谈党文化</a ></p><p><a href="https://tt6.jugd53.ml/nawyzs/p7w" target="_blank">大纪元</a> | <a href="https://tt6.jugd53.ml/nawyzs/c5x" target="_blank">新唐人</a> | <a href="https://git.io/JervF" target="_blank">亚太台</a> | <a href="https://git.io/fjHpG" target="_blank">直播</a> | <a href="https://gitlab.com/szzdlab/v/raw/master/v/2014-1-7/zfzx.mp4" target="_blank">伪火</a > | <a href="https://gitlab.com/szzdlab/w5/raw/master/5N.8.mp4" target="_blank">罪恶</a > | <a href="https://gitlab.com/szzdlab/w3/raw/master/9p.mp4" target="_blank">九评</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/wl.mp4" target="_blank">神话</a> | <a href="https://gitlab.com/szzdlab/w2/raw/master/3t/TdowhauWx9WiM.mp4" target="_blank">藏字石</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/szt.mp4" target="_blank">寻正道</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/wm.mp4" target="_blank">告诉未来</a > | <a href="https://gitlab.com/szzdlab/w3/raw/master/qh.mp4" target="_blank">清华学子</a> | <a href="https://gitlab.com/szzdlab/v/raw/master/v/2013-10-28/hongchaoyinmou-hi.mp4" target="_blank">红朝阴谋</a > |<a href="https://gitlab.com/szzdlab/w5/raw/master/fy.mp4" target="_blank">风雨天地行</a></p></td></tr>
+<a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/oqudue369/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/oqudue369/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/oqudue369/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/oqudue369/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/oqudue369/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/oqudue369/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/oqudue369/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/oqudue369/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/oqudue369/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/oqudue369/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/12a.jpg" title="头条"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p> <a href="https://tt6.jugd53.ml/qnxqwok/l513k" target="_blank">动态网</a> | <a href="https://tt6.jugd53.ml/qnxqwok/i11e" target="_blank">看中国</a> | <a href="https://git.io/fjHpI" target="_blank">新纪元</a> | <a href="https://tt6.jugd53.ml/qnxqwok/i12z" target="_blank">无界</a> | <a href="https://tt6.jugd53.ml/qnxqwok/r8c" target="_blank">退党</a> | <a href="https://git.io/fjHpT" target="_blank">网门</a> | <a href="https://tt6.jugd53.ml/qnxqwok/g4m" target="_blank">神韵</a> | <a href="https://tt6.jugd53.ml/qnxqwok/r12h" target="_blank">圣缘</a> | <a href="https://tt6.jugd53.ml/qnxqwok/l3d" target="_blank">明慧网</a> | <a href="https://tt6.jugd53.ml/qnxqwok/m10f" target="_blank">正见网</a> | <a href="https://tt6.jugd53.ml/qnxqwok/x9n" target="_blank">希望之声</a> | <a href="https://gitlab.com/szzdlab/w1/raw/master/5Vu3_XS2V.mp4" target="_blank">无罪辩护</a> |  <a href="https://gitlab.com/szzdlab/w5/raw/master/zjmd1_19.mp4" target="_blank">终级目的</a> |<a href="https://gitlab.com/szzdlab/w5/raw/master/mtdwh.mp4" target="_blank">漫谈党文化</a ></p><p><a href="https://tt6.jugd53.ml/qnxqwok/g7m" target="_blank">大纪元</a> | <a href="https://tt6.jugd53.ml/qnxqwok/h5z" target="_blank">新唐人</a> | <a href="https://git.io/JervF" target="_blank">亚太台</a> | <a href="https://git.io/fjHpG" target="_blank">直播</a> | <a href="https://gitlab.com/szzdlab/v/raw/master/v/2014-1-7/zfzx.mp4" target="_blank">伪火</a > | <a href="https://gitlab.com/szzdlab/w5/raw/master/5N.8.mp4" target="_blank">罪恶</a > | <a href="https://gitlab.com/szzdlab/w3/raw/master/9p.mp4" target="_blank">九评</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/wl.mp4" target="_blank">神话</a> | <a href="https://gitlab.com/szzdlab/w2/raw/master/3t/TdowhauWx9WiM.mp4" target="_blank">藏字石</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/szt.mp4" target="_blank">寻正道</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/wm.mp4" target="_blank">告诉未来</a > | <a href="https://gitlab.com/szzdlab/w3/raw/master/qh.mp4" target="_blank">清华学子</a> | <a href="https://gitlab.com/szzdlab/v/raw/master/v/2013-10-28/hongchaoyinmou-hi.mp4" target="_blank">红朝阴谋</a > |<a href="https://gitlab.com/szzdlab/w5/raw/master/fy.mp4" target="_blank">风雨天地行</a></p></td></tr>
 <tr><td VALIGN=TOP width="355" height="1000"><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12242776.md#1"><img width="320" src="https://i.epochtimes.com/assets/uploads/2020/06/AAA-2-320x200.jpg"><p align="center">【最新疫情7.9】香港出现第三波感染</p></a>
 <a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12242776.md#1" title="【最新疫情7.9】香港出现第三波感染""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/06/AAA-2-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12242765.md#1" title="被捕香港大纪元员工：遭警威胁送中活摘""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/07/DSC_6510-1-320x200.jpg">&nbsp;</a>
@@ -13,11 +13,11 @@
 <a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/8/n12241760.md#1" title="中芯国际股价暴涨暴跌 中共撒钱难掩窘境""><img width="73" src="https://i.epochtimes.com/assets/uploads/2019/06/GettyImages-55920462-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/8/n12241863.md#1" title="【一线采访】贵州铜仁山体滑坡 村庄被埋""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/07/IMG_1400-320x200.jpg">&nbsp;</a>
 <p align="center"><a href="https://github.com/oqudue369/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://oqudue369.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>10分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12243734.md#1">韩国首尔市长失联 手机关机 疑似留下遗言</a><br>
-:clock8: <em>12分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12243611.md#1">709大抓捕5周年 蓬佩奥：这波打压仍在持续</a><br>
-:clock8: <em>16分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12243659.md#1">习当局再清洗政法系统 分析：大动作在后面</a><br>
-:clock8: <em>48分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12243597.md#1">王全璋律师展开维权行动 向法院递交控告状</a><br>
-:clock8: <em>54分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12243607.md#1">美联航和美航再次暂停飞往香港的航班</a><br>
+:clock8: <em>23分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12243734.md#1">韩国首尔市长失联 手机关机 疑似留下遗言</a><br>
+:clock8: <em>24分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12243611.md#1">709大抓捕5周年 蓬佩奥：这波打压仍在持续</a><br>
+:clock8: <em>29分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12243659.md#1">习当局再清洗政法系统 分析：大动作在后面</a><br>
+:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12243597.md#1">王全璋律师展开维权行动 向法院递交控告状</a><br>
+:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12243607.md#1">美联航和美航再次暂停飞往香港的航班</a><br>
 :clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/2/n12227709.md#1">美国加速与中俄的太空军事竞赛</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
 <a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/7/n12239553.md#1">贵州大巴21死 传司机是退伍军人、拆迁户</a><br>
@@ -29,7 +29,6 @@
 <a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/8/n12240429.md#1">【翻墙必看】中共在美国“猎狐”真相曝光</a><br>
 <a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/6/n12237466.md#1">美肯塔基海关查获46磅来自中国的迷奸药</a><br>
 <a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/7/n12239209.md#1">中共在克什米尔建水坝 引发大规模抗议</a><br>
-<a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/7/n12239307.md#1">新浪或将退市 又一互联网中概股欲离场</a><br>
 <br><p align="center"><a href="https://github.com/oqudue369/djy/blob/master/gb/nscrw413.md#1">更多......</a></p><hr><h2><p><strong>纪元推荐</strong></p></h2>
 <a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/4/n12232591.md#1">【独家】内部文件曝中共脸书账号的秘密</a><br>
 <a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/7/n12239799.md#1">FBI：每10小时启动一起中共相关反间谍案</a><br>
@@ -42,7 +41,7 @@
 
 ```diff
 !退出中共党、团、队总人数:
-!共 359,548,911 人
+!共 359,549,680 人
 ```
 </strong><p align="center"><strong align="center"><a href="https://x.co/dd3">我要退出中共党团队</a></strong></h2></td>
 <td VALIGN=TOP width="352">
